src/test/deca/context/invalid/homemade/tests/test371_appel_method_sur_nonclass.deca
// test invalide de la règle 3.71


class A{

    public int x = 8;
    void calcul(int valeur){
        this.x = this.x + 2;
    }
    
    
}


{
    A a = new A();
    a.x.calcul(3);
}
